environments/gloo-gateway/gateway-api/1.18/ai-gateway/field-demo/demos/deepseek/lb-failover-demo/traffic-shift/deepseek-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ollama-deepseek
  namespace: gloo-system
spec:
  parentRefs:
  - name: ai-gateway
    namespace: gloo-system
  rules:
  - backendRefs:
    - group: gloo.solo.io
      kind: Upstream
      name: ollama-deepseek-1.5-upstream
      namespace: gloo-system
      weight: 100
    #- group: gloo.solo.io
    #  kind: Upstream
    #  name: ollama-deepseek-1.8-upstream
    #  namespace: gloo-system
    #  weight: 50
    filters:
    - extensionRef:
        group: gateway.solo.io
        kind: RouteOption
        name: ollama-deepseek-route-policies
      type: ExtensionRef
    matches:
    - path:
        type: PathPrefix
        value: /deepseek
